actual fix for projects on mobile on focus 9/12/2022

--- a/styles.css
+++ b/styles.css
@@ -609,7 +609,8 @@ nav figure {
 }
 
 .project__wrapper,
-.project_-img {
+.project_-img,
+.project__wrapper--bg {
   border-radius: 20px;
 }
 
